# autogen/openapi_server/controllers/default_controller.py
@@ -4,6 +4,7 @@ import six
 from openapi_server.models.actor import Actor  # noqa: E501
 from openapi_server.models.average_each_year import AverageEachYear  # noqa: E501
 from openapi_server.models.director import Director  # noqa: E501
+from openapi_server.models.director_movie import DirectorMovie  # noqa: E501
 from openapi_server.models.movie import Movie  # noqa: E501
 from openapi_server import util
 
@@ -160,7 +161,7 @@ def controller_get_movies_directed_by_director_name(director_name):  # noqa: E50
     :param director_name: 
     :type director_name: str
 
-    :rtype: Movie
+    :rtype: DirectorMovie
     """
     return 'do some magic!'
 
