# autogen/openapi_server/models/__init__.py
@@ -6,4 +6,5 @@ from __future__ import absolute_import
 from openapi_server.models.actor import Actor
 from openapi_server.models.average_each_year import AverageEachYear
 from openapi_server.models.director import Director
+from openapi_server.models.director_movie import DirectorMovie
 from openapi_server.models.movie import Movie
